Finished equal button logic

--- a/style.css
+++ b/style.css
@@ -44,6 +44,8 @@ button {
     align-items: center;
     background-color: rgb(236, 236, 236);
     margin: 2px;
+    font-weight: bold;
+    font-size: 14px;
 }
 
 button:hover {
