--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ button {
     background-color: rgb(236, 236, 236);
     margin: 2px;
     font-weight: bold;
-    font-size: 14px;
+    font-size: 12px;
 }
 
 button:hover {
@@ -54,4 +54,9 @@ button:hover {
 
 #evaluate {
     background-color: rgba(245,163,77,255);
+}
+
+#del,
+#clr {
+    width: 90px;
 }
